[package]
name = "raekna-compute"
version = "0.2.1"
authors = ["Mathias Peters"]
edition = "2021"
description = "This crate allows evaluating expressions into literals."
license = "MPL-2.0"
repository = "https://github.com/mathiaspeters/raekna"

[dependencies]
raekna-common = "0.2"

[dev-dependencies]
proptest = "1.9"