[package]
name = "raekna-storage"
version = "0.2.0"
authors = ["Mathias Peters"]
edition = "2021"
description = "This crate provides in-memory and persistent storage functionality to the raekna project."
license = "MPL-2.0"
repository = "https://github.com/mathiaspeters/raekna"

[dependencies]
raekna-common = "0.2"