[package]
name = "raekna-ui"
version = "0.1.0"
authors = ["Mathias Peters"]
edition = "2021"
description = "This crate contains functionality to draw a plain text calculator using wgpu."
license = "MPL-2.0"
repository = "https://github.com/mathiaspeters/raekna"

[dependencies]
wgpu_glyph = "0.16"
winit = "0.26"
log = "0.4"
env_logger = "0.9"
wgpu = "0.12"
futures-lite = "1.12"
bytemuck = { version = "1.9", features = [ "derive" ] }
copypasta = "0.7"

raekna-common = "0.1.0"