[package]
name = "raekna-ui"
version = "0.2.1"
authors = ["Mathias Peters"]
edition = "2024"
description = "This crate contains functionality to draw a plain text calculator using wgpu."
license = "MPL-2.0"
repository = "https://github.com/mathiaspeters/raekna"

[dependencies]
bytemuck = { version = "1.24", features = [ "derive" ] }
copypasta = "0.10"
env_logger = "0.11"
futures-lite = "2.6"
log = "0.4"
raekna-common = "0.2"
wgpu_glyph = "0.26"
wgpu = "26.0"
winit = "0.30"