[package]
name = "raekna"
version = "0.1.1"
authors = ["Mathias Peters"]
edition = "2021"
description = "This crate combines the other crates in the workspace to make a functional program."
license = "MPL-2.0"
repository = "https://github.com/mathiaspeters/raekna"

[dependencies]
raekna-common  = "0.2"
raekna-compute = "0.1"
raekna-parser  = "0.1"
raekna-storage = "0.1"
raekna-ui      = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false